--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
             android:name=".RutinasActivity3"
             android:exported="false" />
         <activity
+            android:name=".OpcionDieta"
+            android:exported="false" />
+        <activity
             android:name=".RutinasActivity2"
             android:exported="false" />
         <activity
@@ -29,7 +32,7 @@
             android:exported="false" />
         <activity
             android:name=".tab.Activity_Generation"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".Activity_Select_Rutine"
             android:exported="false" />
